Document update, second revision.

--- a/docs/latex/01-Introduccion.tex
+++ b/docs/latex/01-Introduccion.tex
@@ -1,34 +1,36 @@
 \chapter{Introducción}
 
-Imagina que se te ha dado un texto de un autor anónimo, y deseas saber tanto como sea posible del autor (género, ocupación, personalidad etc.), sólo analizando el texto dado. Es sorprendente pero el texto refleja parte de la personalidad del autor. Así que, observando el texto, al  determinar su estilo y contenido, es posible inferir información sobre el autor. A esta tarea se le conoce como \textit{perfilado de autor} y está fundada en estudios dentro de la comunidad sociolingüística que han demostrado que las palabras utilizadas en la vida diaria pueden revelar importantes aspectos sociales y psicológicos. Gracias a los avances en computación, el análisis de textos permite a los investigadores obtener características de lo que las personas dicen y también de las particularidades en sus estilos lingüísticos \citep{Pennebaker2002}. 
+Imagina que se te ha dado un texto de un autor anónimo, y deseas saber tanto como sea posible del autor (género, ocupación, personalidad etc.), sólo analizando el texto dado. Es sorprendente, pero el texto refleja parte de la personalidad del autor. Así que, observando el texto al determinar su estilo y contenido, es posible inferir información sobre el autor. A esta tarea se le conoce como \textit{perfilado de autor} y está fundada en estudios dentro de la comunidad sociolingüística, demostrando que las palabras utilizadas en la vida diaria pueden revelar importantes aspectos sociales y psicológicos. Gracias a los avances en computación, el análisis de textos permite a los investigadores obtener características de lo que las personas dicen y también de las particularidades en sus estilos lingüísticos \citep{Pennebaker2002}. 
 
-El interés en esta tarea ha crecido gracias al constante flujo de información compartida a través de redes sociales (por ejemplo Twitter \footnote{www.twitter.com}, Facebook\footnote{www.facebook.com}, Reddit \footnote{www.reddit.com}) y sus aplicaciones varían desde mercadotecnia hasta seguridad nacional. 
-Existen numerosas razones del por que nos interesa conocer datos relevantes de los usuarios de redes sociales. Por ejemplo, a las empresas les interesaría conocer a qué tipo de usuarios les gusta o no su producto o servicio, con la intención de dirigir una mejor campaña de publicidad \citep{ikeda2013twitter}. Además en un contexto de seguridad informática, a la policía cibernética le gustaría conocer el perfil de las personas que envían mensajes amenazantes o de acoso sexual \citep{bogdanova2012impact}.
+El interés en esta tarea ha crecido gracias al constante flujo de información compartida a través de redes sociales (por ejemplo, Twitter \footnote{www.twitter.com}, Facebook\footnote{www.facebook.com} y Reddit \footnote{www.reddit.com}) y sus aplicaciones varían desde mercadotecnia hasta seguridad nacional. 
+Existen numerosas razones del por qué nos interesa conocer datos relevantes de los usuarios de redes sociales. Por ejemplo, a las empresas les interesaría conocer a qué tipo de usuarios les gusta o no su producto o servicio, con la intención de dirigir una mejor campaña de publicidad \citep{ikeda2013twitter}. Además, en un contexto de seguridad informática, a la policía cibernética le gustaría conocer el perfil de las personas que envían mensajes amenazantes o de acoso sexual \citep{bogdanova2012impact}.
 
-Claro está que la tarea no es simple y debido al lenguaje informal de redes sociales y poco estandarizado hace que esta tarea sea aún más desafiante, por ejemplo: errores gramaticales, abreviaturas, anglicismos, emoticonos o incluso texto generado por cuentas automáticas. Una de las conferencias más destacadas en perfilado de autor ha sido el PAN@CLEF\footnote{www.pan.webis.de} (una serie de eventos científicos y tareas compartidas en el análisis forense digital y estilométrico); desde el año 2013 al actual se han estudiado diversos enfoques del perfilado de autor desde una perspectiva multi-idioma (inglés y español principalmente) entre las cuales destacan: identificación de edad y género \citep{Rangel2013b}, identificación de personalidad, variación de lenguaje y dimensión de género \citep{Stammatatos2015}. Un tema de particular importancia es el perfilado de características de comportamiento \citep{kumar2018aggression} y condiciones médicas \citep{de2013predicting}; estas tareas se han desarrollado en subcampos y con sus propias conferencias. Por ejemplo, la conferencia eRISK \citep{Losada2018}, está orientada al perfilado del autor en búsqueda de evidencia de trastornos como la depresión o la anorexia. 
+Claro está que la tarea no es simple y debido al lenguaje informal de redes sociales y poco estandarizado hace que esta tarea sea aún más desafiante, por ejemplo: errores gramaticales, abreviaturas, anglicismos, emoticonos o incluso texto generado por cuentas automáticas. Una de las conferencias más destacadas en perfilado de autor ha sido el PAN@CLEF\footnote{www.pan.webis.de} (una serie de eventos científicos y tareas compartidas en el análisis forense digital y estilométrico); desde el año 2013 al actual se han estudiado diversos enfoques del perfilado de autor desde una perspectiva multi-idioma (inglés y español principalmente) entre las cuales destacan: identificación de edad y género \citep{Rangel2013b}, identificación de personalidad, variación de lenguaje y dimensión de género \citep{Stammatatos2015}. 
+
+Un tema de particular importancia es el perfilado de características de comportamiento \citep{kumar2018aggression} y condiciones médicas \citep{de2013predicting}; estas tareas se han desarrollado en subcampos y con sus propias conferencias. Por ejemplo, la conferencia eRisk \citep{Losada2018}, está orientada al perfilado del autor en búsqueda de evidencia de trastornos como la depresión o la anorexia. El perfilado automático de depresión y anorexia consiste en recopilar una serie de textos de diferentes autores, con el objetivo de extraer información útil para construir modelos estadísticos, que permitan predecir signos de depresión y anorexia. La hipótesis inicial es que los cambios en el lenguaje de un autor, empleado para interactuar y expresarse diariamente, contiene patrones que pueden indicar este tipo de desórdenes mentales \cite{de2013predicting}.
 
 
 
 \section{Planteamiento del problema}
 
-Para resolver las tareas de perfilado de autor, la mayoría de los trabajos existentes se han enfocado en utilizar algoritmos de aprendizaje computacional en combinación con diferentes técnicas para extraer características: conteo de palabras \citep{Laserna2014}, identificación de frases personales \citep{Ortega-Mendoza2018}, análisis de emociones \citep{Aragon2019} entre otras técnicas. La obtención de dichas características requiere un análisis riguroso y en muchos casos es necesaria la intervención de expertos en el tema. Sin embargo existen técnicas de aprendizaje computacional más complejas como las redes neuronales en donde la extracción de características se realiza de forma automática mediante una serie de abstracciones.
+Para resolver las tareas de perfilado de autor, la mayoría de los trabajos existentes se han enfocado en utilizar algoritmos de aprendizaje computacional, en combinación con diferentes técnicas para extraer características: conteo de palabras \citep{Laserna2014}, identificación de frases personales \citep{Ortega-Mendoza2018}, análisis de emociones \citep{Aragon2019} entre otras técnicas. La obtención de dichas características requiere un análisis riguroso y en muchos casos es necesaria la intervención de expertos en el tema. No obstante, existen técnicas de aprendizaje computacional más complejas como las redes neuronales, en donde la extracción de características se realiza de forma automática mediante una serie de abstracciones.
 
-La principal motivación para el uso de redes neuronales en perfilado de autor, es debido al increíble éxito del aprendizaje profundo en tareas complejas para el entendimiento del lenguaje : parafraseo, traducción automática, analogía, implicación  textual, similitud semántica, etc. En el conjunto de datos GLUE \citep{wang2018glue} los modelos de aprendizaje profundo han superado la puntuación humana, Christopher D. Manning (Director del laboratorio de inteligencia artificial de la universidad de Stanford) menciona que desde el año 2015 se produjo un tsunami del aprendizaje profundo en el área de procesamiento de lenguaje natural, debido a la gran cantidad de artículos en conferencias de NLP utilizando aprendizaje profundo \citep{Manning2015}.
+La principal motivación para el uso de redes neuronales en perfilado de autor, es debido al increíble éxito del aprendizaje profundo en tareas complejas para el entendimiento del lenguaje: parafraseo, traducción automática, analogía, implicación textual, similitud semántica, etc. En el conjunto de datos GLUE \citep{wang2018glue}, los modelos de aprendizaje profundo han superado la puntuación humana, Christopher D. Manning (director del laboratorio de inteligencia artificial de la universidad de Stanford), menciona que desde el año 2015 se produjo un tsunami del aprendizaje profundo en el área de procesamiento de lenguaje natural, debido a la gran cantidad de artículos en conferencias de NLP utilizando aprendizaje profundo \citep{Manning2015}.
 
-De acuerdo al estado del arte en la última conferencia del PAN@CLEF los equipos con mejores resultados utilizaron técnicas tradicionales de aprendizaje como lo son máquinas de soporte vectorial SVM en combinación con n-gramas de carácteres. Así también en las tareas del eRISK el mejor sistema se construyó extrayendo características en combinación con un ensamble de bolsas de palabras (BOW por sus siglas en inglés) y diferentes clasificadores. Lo que se ha podido observar en los diferentes reportes de estas conferencias es, que los modelos de aprendizaje basados en redes neuronales no han tenido el éxito esperado. 
+De acuerdo al estado del arte, en la última conferencia del PAN@CLEF los equipos con mejores resultados utilizaron técnicas tradicionales de aprendizaje como lo son máquinas de soporte vectorial SVM, en combinación con n-gramas de caracteres. Así también, en las tareas del eRisk el mejor sistema se construyó extrayendo características en combinación con un ensamble de bolsas de palabras (BOW por sus siglas en inglés) y diferentes clasificadores. Lo que se ha podido observar en los diferentes reportes de estas conferencias es que los modelos de aprendizaje basados en redes neuronales no han tenido el éxito esperado. 
 
-Uno de los principales problemas dentro del campo de aprendizaje automático es que el éxito de éste depende de la cantidad de datos etiquetados con que se cuente y se hace más notable cuando se utilizan modelos de aprendizaje profundo, el etiquetado manual de datos consume mucho tiempo y es costoso, además se podría incurrir en problemas legales debido al uso de datos personales, como es el caso en las tareas de perfilado de autor. Los estudios actuales  tratan con un número pequeño de autores conocidos, en donde el etiquetado manual puede ser aplicado, pero considerando las dimensiones de los datos en redes sociales se convierte en una tarea costosa y difícil.
+Uno de los principales problemas dentro del campo de aprendizaje automático es que el éxito de éste depende de la cantidad de datos etiquetados con que se cuente y se hace más notable cuando se utilizan modelos de aprendizaje profundo, el etiquetado manual de datos consume mucho tiempo y es costoso, además se podría incurrir en problemas legales debido al uso de datos personales, como es el caso en las tareas de perfilado de autor. Los estudios actuales tratan con un número pequeño de autores conocidos, en donde el etiquetado manual puede ser aplicado, pero considerando las dimensiones de los datos en redes sociales se convierte en una tarea costosa y difícil.
 
-Uno de los problemas conocidos en la clasificación de textos es el sobre ajuste de los modelos de aprendizaje, el cual se genera en la etapa de entrenamiento debido a que el modelo de  memoriza los pocos documentos de entrenamiento. Por lo tanto ante esta situación es deseable tener una una amplia diversidad en los textos, es decir tener frases que signifiquen los mismo pero escritas de forma diferente; para esto se han propuesto diferentes técnicas como el aumento de datos o agregar ruido aleatorio a los ejemplos originales.
+Uno de los problemas conocidos en la clasificación de textos es el sobreajuste de los modelos de aprendizaje, el cual se genera en la etapa de entrenamiento debido a que el modelo memoriza los pocos documentos de entrenamiento. Por lo tanto, ante esta situación es deseable tener una una amplia diversidad en los textos, es decir tener frases que signifiquen los mismo pero escritas de forma diferente; para esto se han propuesto diferentes técnicas como el aumento de datos o agregar ruido aleatorio a los ejemplos originales.
 
-Observando las limitantes anteriores este trabajo presenta un estudio incrementando el conjunto de datos de entrenamiento, observando el efecto al agregar documentos nuevos. Para ello, se crean nuevos documentos respetando su estructura, y se agregan al  conjunto de entrenamiento original. El estudio analiza el efecto que tiene este incremento en los algoritmos de redes neuronales tradicionales en tareas relacionadas al perfilado de autor. 
+Observando las limitantes anteriores este trabajo presenta un estudio incrementando el conjunto de datos de entrenamiento, observando el efecto al agregar documentos nuevos. Para ello, se crean nuevos documentos respetando su estructura, y se agregan al conjunto de entrenamiento original. Este estudio analiza el efecto que tiene este incremento en los algoritmos de redes neuronales tradicionales en tareas relacionadas al perfilado de autor. 
 
 Algunas de las principales preguntas a contestar en esta investigación son:
 
 \begin{enumerate}
     \item {¿Cómo conservar el estilo y contenido para el aumento de datos en perfilado de autor?}
     \item ¿En qué tipo de arquitecturas basadas en redes neuronales tiene mayor impacto el aumento de datos?
-    \item ¿Se puede mejorar el perfilado de usuarios que sufren un trastorno mental mediante el aumento de datos?
+    \item ¿Se puede mejorar el perfilado de usuarios que sufren depresión y anorexia mediante el aumento de datos?
 \end{enumerate}
 
 
@@ -41,7 +43,7 @@ Proponer un método de aumento de datos, considerando estilo y contenido del tex
 \begin{enumerate}
     \item Diseñar diferentes estrategias de aumento de datos bajo condiciones supervisadas, que permita conservar el estilo y contenido del documento original y a la vez aumentar el vocabulario.
     \item Demostrar el efecto del aumento de datos tanto en modelos de redes neuronales como en modelos de aprendizaje supervisado tradicionales.
-    \item Evaluar y analizar los métodos propuestos para abordar el perfilado de condiciones médicas en redes sociales.
+    \item Evaluar y analizar los métodos propuestos para abordar el perfilado de depresión y anorexia en redes sociales.
  
 \end{enumerate}
 
@@ -57,16 +59,14 @@ Esta tesis está organizada de la siguiente forma:
 \item Capítulo 2: \textbf{Marco teórico}. Presenta una rápida introducción a la clasificación de textos con aprendizaje automático, además de mencionar las principales métricas de evaluación utilizadas en este trabajo. Los conceptos descritos son fundamentales para comprender la solución propuesta.
 
 
-\item Capítulo 3: \textbf{Trabajo relacionado}. Describe el estado del arte en perfilado de autor y aumento de datos para clasificación de textos, su principal objetivo es conocer como se ha abordado el problema y  analizar las ventajas y desventajas de los métodos existentes.
+\item Capítulo 3: \textbf{Trabajo relacionado}. Describe el estado del arte en perfilado de autor y aumento de datos para clasificación de textos, su principal objetivo es conocer como se ha abordado el problema y analizar las ventajas y desventajas de los métodos existentes.
 
 %%%Cuadro comparativo de ventajas y desventajas de los diferentes metodos
 
 
-\item Capítulo 4: \textbf{Método propuesto}: En este capítulo se describen a detalle los métodos propuestos, su justificación y el enfoque supervisado aplicado.
+\item Capítulo 4: \textbf{Método propuesto}: En este capítulo se describen a detalle los métodos propuestos, su justificación y algunos ejemplos de aumento de datos.
 
 \item Capítulo 5: \textbf{Configuración experimental y resultados}: En este capítulo se describen los conjuntos de datos estudiados y la configuración para los distintos clasificadores empleados, así como los métodos propuestos y los métodos de referencia o de comparación. Se realiza una comparación de los resultados obtenidos con el estado del arte para la detección de depresión y anorexia.
-
-%\item Capítulo 6: \textbf{Análisis y discusión}: Se discute el rendimiento del método de acuerdo a los diferentes parámetros, configuraciones y las dificultades encontradas.
 
 \item Capítulo 6: \textbf{Conclusiones y trabajo futuro:} Por último se exponen las principales contribuciones de este trabajo y formas en que se puede mejorar.
 
