--- a/docs/latex/Bibliografia.bib
+++ b/docs/latex/Bibliografia.bib
@@ -1,3 +1,49 @@
+@inproceedings{Aragon2019,
+  title={Detecting Depression in Social Media using Fine-Grained Emotions},
+  author={Arag{\'o}n, Mario Ezra and L{\'o}pez-Monroy, Adrian Pastor and Gonz{\'a}lez-Gurrola, Luis Carlos and Montes, Manuel},
+  booktitle={Proceedings of the 2019 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long and Short Papers)},
+  pages={1481--1486},
+  year={2019}
+}
+
+@inproceedings{mikolov2013linguistic,
+  title={Linguistic regularities in continuous space word representations},
+  author={Mikolov, Tom{\'a}{\v{s}} and Yih, Wen-tau and Zweig, Geoffrey},
+  booktitle={Proceedings of the 2013 conference of the north american chapter of the association for computational linguistics: Human language technologies},
+  pages={746--751},
+  year={2013}
+}
+
+@inproceedings{veenhoven2018using,
+  title={Using translated data to improve deep learning author profiling models},
+  author={Veenhoven, Robert and Snijders, Stan and van der Hall, Dani{\"e}l and van Noord, Rik},
+  booktitle={Proceedings of the Ninth International Conference of the CLEF Association (CLEF 2018)},
+  volume={2125},
+  year={2018}
+}
+
+
+@inproceedings{kim2014convolutional,
+  title={Convolutional Neural Networks for Sentence Classification},
+  author={Kim, Yoon},
+  booktitle={Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  pages={1746--1751},
+  year={2014}
+}
+
+@article{devlin2018bert,
+  title={Bert: Pre-training of deep bidirectional transformers for language understanding},
+  author={Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  journal={arXiv preprint arXiv:1810.04805},
+  year={2018}
+}
+
+@article{peters2018deep,
+  title={Deep contextualized word representations},
+  author={Peters, Matthew E and Neumann, Mark and Iyyer, Mohit and Gardner, Matt and Clark, Christopher and Lee, Kenton and Zettlemoyer, Luke},
+  journal={arXiv preprint arXiv:1802.05365},
+  year={2018}
+}
 
 @article{beck1961inventory,
   title={An inventory for measuring depression},
@@ -182,7 +228,8 @@ author={
   author={Jungiewicz, Micha{\l} and Smywi{\'n}ski-Pohl, Aleksander},
   journal={Computer Science},
   volume={20},
-  year={2019}
+  year={2019},
+  pages={57-83}
 }
 
 @inproceedings{levy2014linguistic,
@@ -396,9 +443,9 @@ year = {2019}
   year={2017}
 }
 
-@inproceedings{cacheda2018analysis,
+@article{cacheda2018analysis,
   title={Analysis and Experiments on Early Detection of Depression.},
-  author={Cacheda, Fidel and Iglesias, Diego Fern{\'a}ndez and N{\'o}voa, Francisco J and Carneiro, Victor},
+  author={Cacheda, Fidel and Iglesias, Diego Fern{\'a}ndez and N{\'o}voa, Francisco Javier and Carneiro, Victor},
   journal={CLEF (Working Notes)},
   volume={2125},
   year={2018}
@@ -413,12 +460,16 @@ year = {2019}
   organization={Springer}
 }
 
-@inproceedings{de2013predicting,
-  title={Predicting depression via social media},
+@article{de2013predicting,
+  title={Predicting depression via social media.},
   author={De Choudhury, Munmun and Gamon, Michael and Counts, Scott and Horvitz, Eric},
-  booktitle={Seventh international AAAI conference on weblogs and social media},
-  year={2013}
+  journal={Icwsm},
+  volume={13},
+  pages={1--10},
+  year={2013},
+  publisher={Boston, MA}
 }
+
 @article{rude2004language,
   title={Language use of depressed and depression-vulnerable college students},
   author={Rude, Stephanie and Gortner, Eva-Maria and Pennebaker, James},
@@ -559,12 +610,6 @@ year = {2015}
   year={2015}
 }
 
-@article{kim2014convolutional,
-  title={Convolutional neural networks for sentence classification},
-  author={Kim, Yoon},
-  journal={arXiv preprint arXiv:1408.5882},
-  year={2014}
-}
 
 @inproceedings{zhang2015character,
   title={Character-level convolutional networks for text classification},
@@ -681,18 +726,10 @@ year = {2015}
 }
 
 @article{Minaee2020,
-abstract = {Deep learning based models have surpassed classical machine learning based approaches in various text classification tasks, including sentiment analysis, news categorization, question answering, and natural language inference. In this work, we provide a detailed review of more than 150 deep learning based models for text classification developed in recent years, and discuss their technical contributions, similarities, and strengths. We also provide a summary of more than 40 popular datasets widely used for text classification. Finally, we provide a quantitative analysis of the performance of different deep learning models on popular benchmarks, and discuss future research directions.},
-archivePrefix = {arXiv},
-arxivId = {2004.03705},
-author = {Minaee, Shervin and Kalchbrenner, Nal and Cambria, Erik and Nikzad, Narjes and Chenaghlu, Meysam and Gao, Jianfeng},
-eprint = {2004.03705},
-file = {:D$\backslash$:/v1ktop/Documentos/Libros/ALotOfPapers/Deep Learning Based Text Classification A Comprehensive Review.pdf:pdf},
-number = {1},
-pages = {1--42},
-title = {{Deep Learning Based Text Classification: A Comprehensive Review}},
-url = {http://arxiv.org/abs/2004.03705},
-volume = {1},
-year = {2020}
+  title={Deep learning based text classification: A comprehensive review},
+  author={Minaee, Shervin and Kalchbrenner, Nal and Cambria, Erik and Nikzad, Narjes and Chenaghlu, Meysam and Gao, Jianfeng},
+  journal={arXiv preprint arXiv:2004.03705},
+  year={2020}
 }
 
 
@@ -758,7 +795,10 @@ year = {2020}
   author={Jones, Karen Sparck},
   journal={Journal of documentation},
   year={1972},
-  publisher={MCB UP Ltd}
+  publisher={MCB UP Ltd},
+  volume={28},
+  number={1},
+  pages={11-21}
 }
 
 @article{kowsari2019text,
@@ -811,18 +851,6 @@ volume = {41},
 year = {2015}
 }
 
-
-@article{Aragon2019,
-abstract = {Nowadays social media platforms are the most popular way for people to share information, from work issues to personal matters. For example , people with health disorders tend to share their concerns for advice, support or simply to relieve suffering. This provides a great opportunity to proactively detect these users and refer them as soon as possible to professional help. We propose a new representation called Bag of Sub-Emotions (BoSE), which represents social media documents by a set of fine-grained emotions automatically generated using a lexical resource of emotions and sub-word embeddings. The proposed representation is evaluated in the task of depression detection. The results are encouraging; the usage of fine-grained emotions improved the results from a representation based on the core emotions and obtained competitive results in comparison to state of the art approaches.},
-author = {Arag{\'{o}}n, Mario Ezra and L{\'{o}}pez-Monroy, Adrian Pastor and Gonz{\'{a}}lez-Gurrola, Luis Carlos and Montes-y-G{\'{o}}mez, Manuel},
-doi = {10.18653/v1/n19-1151},
-file = {:C$\backslash$:/Users/v1kto/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Arag{\'{o}}n et al. - 2019 - Detecting Depression in Social Media using Fine-Grained Emotions.pdf:pdf},
-mendeley-groups = {Depre},
-number = {2013},
-pages = {1481--1486},
-title = {{Detecting Depression in Social Media using Fine-Grained Emotions}},
-year = {2019}
-}
 
 
 @inproceedings{bogdanova2012impact,
