--- a/docs/latex/sections/figures/candleplot.tex
+++ b/docs/latex/sections/figures/candleplot.tex
@@ -1,4 +1,4 @@
-\begin{figure}[!h]
+\begin{figure}[!ht]
     \centering
   \includegraphics[scale=0.9]{sections/figures/sticks-state.png}
     \caption{Comparación con el estado del arte en detección de depresión y anorexia}
