--- a/docs/latex/sections/figures/dist_data.tex
+++ b/docs/latex/sections/figures/dist_data.tex
@@ -11,7 +11,7 @@
         \includegraphics[width=\textwidth]{sections/figures/length_dist_anorexia.eps}
         \caption{Anorexia}
     \end{subfigure}
-    \caption{Distribución del numero de palabras en los historiales de usuarios estudiados}
+    \caption{Distribución del número de palabras en los historiales de usuarios estudiados}
     \label{fig:erisk_freq}
 \end{figure}
 
