--- a/docs/latex/sections/figures/geom.tex
+++ b/docs/latex/sections/figures/geom.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}[ht]
     \includegraphics[width=\textwidth]{sections/figures/geometric_pmf.eps}
     \caption{Función de masa para la distribución geométrica con diferentes valores de probabilidad.}
     \label{fig:geom}
