--- a/docs/latex/sections/figures/graficas_comparacion_anox.tex
+++ b/docs/latex/sections/figures/graficas_comparacion_anox.tex
@@ -12,15 +12,15 @@
     
     
 
-    \begin{subfigure}[b]{0.5\textwidth}
-        \includegraphics[width=\textwidth]{sections/figures/SVMAnox.png}
-        \caption{SVM}
-    \end{subfigure}
-    \begin{subfigure}[b]{0.5\textwidth}
-        \includegraphics[width=\textwidth]{sections/figures/SVM-CAnox.png}
-        \caption{SVM-C}
-    \end{subfigure}
+    % \begin{subfigure}[b]{0.5\textwidth}
+    %     \includegraphics[width=\textwidth]{sections/figures/SVMAnox.png}
+    %     \caption{SVM}
+    % \end{subfigure}
+    % \begin{subfigure}[b]{0.5\textwidth}
+    %     \includegraphics[width=\textwidth]{sections/figures/SVM-CAnox.png}
+    %     \caption{SVM-C}
+    % \end{subfigure}
     
-    \caption{Relación entre el aumento del conjunto de datos \textit{Anorexia} y la ganancia en F1.}
+    \caption{Relación entre el aumento del conjunto de datos \textit{Anorexia} y la ganancia porcentual en F1.}
     \label{fig:aumento_n_anorexia}
 \end{figure}
