--- a/docs/latex/sections/tables/depresion_users_no_filter.tex
+++ b/docs/latex/sections/tables/depresion_users_no_filter.tex
@@ -14,7 +14,7 @@ deprimido                                                   & \textbf{135} - 31,
 \rowcolor[HTML]{FFFFFF} 
 no-deprimido                                                & \textbf{752} - 227,189                                & \textbf{741} - 272,703                                &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                                              & \textit{\textbf{887} - 138,232}                       & \textit{\textbf{820} - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{202,151}} \\ \hline
+\textbf{Total}                                              & \textit{\textbf{887} - 258,585}                       & \textit{\textbf{820} - 298,670}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{202,151}} \\ \hline
 \rowcolor[HTML]{EFEFEF} 
 \cellcolor[HTML]{EFEFEF}\textit{Conjunto 2: Depresión 2019} &                                              &                                              &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
@@ -26,11 +26,11 @@ no-deprimido                                                & \textbf{752} - 227
 \rowcolor[HTML]{EFEFEF} 
 \textit{Conjunto 3: Anorexia}                               & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-con anorexia                                                & \textbf{61} - 23,335                                  & 73 - 16,751                                  &                                                              \\ \hline
+con anorexia                                                & \textbf{61} - 23,335                                  & \textbf{73} - 16,751                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-sin-anorexia                                                & \textbf{411} - 36,484                                 & \textbf{742} - 254,640                                &                                                              \\ \hline
+sin-anorexia                                                & \textbf{411} - 107,239                                 & \textbf{742} - 254,640                                &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                                              & \textit{\textbf{472} - 130,574}                       & \textit{\textbf{815} - 271,391}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{67,724}}  \\ \hline
+\textbf{Total}                                              & \textit{\textbf{472} - 130,574}                       & \textit{\textbf{815} - 271,391}                       & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{131,264}}  \\ \hline
 \end{tabular}
 
 \end{center}
