--- a/docs/latex/sections/tables/ejemplos_contraria.tex
+++ b/docs/latex/sections/tables/ejemplos_contraria.tex
@@ -1,24 +1,24 @@
 \begin{table}[hbt!]
-\caption{Ejemplos del aumento de datos para el método basado en relaciones contrarias, las palabras resaltadas en negritas son las que resultaron afectadas después de la transformación.} 
+\caption{Ejemplos del aumento de datos para el método basado en relaciones contrarias, las palabras en cursiva, son las que resultaron afectadas después de la transformación.} 
 \label{table:ejemplos_contraria}
 \begin{center}
 \resizebox{\columnwidth}{!}{%
 \begin{tabular}{ll}
 \hline
-\rowcolor[HTML]{EFEFEF} 
-\textbf{Método} & \textbf{Secuencia}                                           \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-Sin Aumento     & i connected with a girl we sat up and talked all night       \\ \hline
+ & \textbf{Secuencia}                                           \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-(happiness, anxious)      & i \textbf{disconnected} with a girl we sat up and talked all night    \\ \hline
+\textbf{Original }   & i connected with a girl we sat up and talked all night       \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-(happiness, frustrated)      & i connected with a girl we sat up and \textbf{complained} all night   \\ \hline
+happiness - anxious      & i \textit{disconnected} with a girl we sat up and talked all night    \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-(happiness, unhappy)       & i connected with a \textbf{boy} we \textbf{complained} up and talked all night \\ \hline
+happiness - frustrated      & i connected with a girl we sat up and \textit{complained} all night   \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-(happiness, despondent)       & i \textbf{dispirited} with a girl we sat up and talked all night      \\ \hline
+happiness - unhappy       & i connected with a \textit{boy} we \textit{complained} up and talked all night \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-(happiness, discouraged)       & i connected with a \textbf{shy} we \textbf{dismayed} up and \textbf{bothered} all night \\ \hline
+happiness - despondent       & i \textit{dispirited} with a girl we sat up and talked all night      \\ \hline
+\rowcolor[HTML]{FFFFFF} 
+happiness - discouraged       & i connected with a \textit{shy} we \textit{dismayed} up and \textit{bothered} all night \\ \hline
 \end{tabular}
 }
 
