--- a/docs/latex/sections/tables/metodos_supervisados.tex
+++ b/docs/latex/sections/tables/metodos_supervisados.tex
@@ -5,7 +5,7 @@
 \begin{tabular}{llllllll}
 \hline
 \rowcolor[HTML]{EFEFEF} 
-Metodo             & Clasificación        & \begin{tabular}[c]{@{}l@{}}Datos \\ desbalanceados\end{tabular} & \begin{tabular}[c]{@{}l@{}}Recurso \\ externo\end{tabular} & \begin{tabular}[c]{@{}l@{}}Parafrasis neuronal \\ o \\ modelo de lenguaje\end{tabular} & Estilo      & Contenido \\ \hline
+Método             & Clasificación        & \begin{tabular}[c]{@{}l@{}}Datos \\ desbalanceados\end{tabular} & \begin{tabular}[c]{@{}l@{}}Recurso \\ externo\end{tabular} & \begin{tabular}[c]{@{}l@{}}Paráfrasis neuronal \\ o \\ modelo de lenguaje\end{tabular} & Estilo      & Contenido \\ \hline
 Zhan2015           & Minería de opiniones              & No                                                              & Tesauro                                                    & No                                                                    & No          & Si                                                                                 \\ \hline
 Kobayashi2018      & Temática             & No                                                              & Glove                                                      & Si                                                                    &      No & Si                                                                                  \\ \hline
 EDA                & Minería de opiniones              & No                                                              & Tesauro                                                    & No                                                                    & No          & Si                                                                                  \\ \hline
