--- a/docs/latex/sections/tables/resultados.tex
+++ b/docs/latex/sections/tables/resultados.tex
@@ -1,5 +1,5 @@
 
-\begin{table}[h]
+\begin{table}[ht]
 \caption{Resultados en términos de la métrica F1, la variable n indica la magnitud del aumento en el conjunto original.} \label{table:resultados}
 
 \begin{center}
@@ -8,29 +8,29 @@
 
 \begin{tabular}{lllrlrrrrr}
 \hline
-\textbf{Conjunto de datos} &                                         & \textbf{Bi-LSTM}                       & \multicolumn{1}{l}{}                          & \textbf{CNN}                           & \multicolumn{1}{l}{}                          & \multicolumn{1}{l}{SVM}             & \multicolumn{1}{l}{}                          & \multicolumn{1}{l}{SVM-C}           & \multicolumn{1}{l}{}                          \\ \hline
-                           & \textit{Metodo}                         & \textit{F1}                            & \multicolumn{1}{l}{\textit{n}}                & \textit{F1}                            & \multicolumn{1}{l}{\textit{n}}                & \multicolumn{1}{l}{F1}              & \multicolumn{1}{l}{n}                         & \multicolumn{1}{l}{F1}              & \multicolumn{1}{l}{n}                         \\ \hline
+\textbf{Conjunto de datos} &                                         & \textbf{Bi-LSTM}                       & \multicolumn{1}{l}{}                          & \textbf{CNN}                           & \multicolumn{1}{l}{}                          & \multicolumn{1}{l}{\textbf{SVM}}             & \multicolumn{1}{l}{}                          & \multicolumn{1}{l}{\textbf{SVM-C}}           & \multicolumn{1}{l}{}                          \\ \hline
+                           & \textit{Método}                         & \textit{F1}                            & \multicolumn{1}{l}{\textit{n}}                & \textit{F1}                            & \multicolumn{1}{l}{\textit{n}}                & \multicolumn{1}{l}{F1}              & \multicolumn{1}{l}{n}                         & \multicolumn{1}{l}{F1}              & \multicolumn{1}{l}{n}                         \\ \hline
 Depresión 2018             & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}47$\pm$3          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}45$\pm$5          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}16          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}50          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}50$\pm$2          & \cellcolor[HTML]{EFEFEF}3                     & \cellcolor[HTML]{EFEFEF}51$\pm$3          & \cellcolor[HTML]{EFEFEF}6                     & \cellcolor[HTML]{EFEFEF}51          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}51          & \cellcolor[HTML]{EFEFEF}9                     \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}50$\pm$4          & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}50$\pm$1          & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}50          & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}48          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}48$\pm$6          & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}\textbf{53$\pm$1} & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}\textbf{53} & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}50          & \cellcolor[HTML]{EFEFEF}3                     \\ \hline
-                           & Restrición Chi2                         & \textbf{52$\pm$3}                         & 4                                             & 50$\pm$3                                  & 2                                             & \textbf{53}                         & 10                                            & 50                                  & 1                                             \\ \hline
-                           & Relacion Positiva                       & 51$\pm$5                                  & 8                                             & 50$\pm$1                                  & 9                                             & 41                                  & 8                                             & 49                                  & 1                                             \\ \hline
-                           & Relacion Contraria                      & 46$\pm$3                                  & 9                                             & 49$\pm$1                                  & 10                                            & 52                                  & 8                                             & \textbf{51}                         & 1                                             \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}48$\pm$3          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}51$\pm$2          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}51          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}51          & \cellcolor[HTML]{EFEFEF}9                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}45$\pm$3          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}52$\pm$2          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}50          & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}48          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Sin restricción & \cellcolor[HTML]{EFEFEF}47$\pm$4          & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}52$\pm$1 & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}53 & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}50          & \cellcolor[HTML]{EFEFEF}3                     \\ \hline
+                           & Restricción $\chi^2$                         & \textbf{49$\pm$3}                         & 9                                             & \textbf{53$\pm$1}                                  & 1                                             & \textbf{53}                         & 10                                            & 50                                  & 1                                             \\ \hline
+                           & Relación Positiva                       & 45$\pm$5                                  & 4                                             & 48$\pm$4                                  & 1                                             & 41                                  & 8                                             & 49                                  & 1                                             \\ \hline
+                           & Relación Contraria                      & 35$\pm$6                                  & 1                                             & 49$\pm$1                                  & 10                                            & 52                                  & 8                                             & \textbf{51}                         & 1                                             \\ \hline
 \textit{Depresión 2019}    & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}74$\pm$8          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}81$\pm$3          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}0           & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}50          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}81$\pm$13         & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}85$\pm$3          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}13          & \cellcolor[HTML]{EFEFEF}\textbf{9}            & \cellcolor[HTML]{EFEFEF}\textbf{50} & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}81$\pm$13         & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}85$\pm$3          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}13          & \cellcolor[HTML]{EFEFEF}9            & \cellcolor[HTML]{EFEFEF}\textbf{50} & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
                            & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}80$\pm$5          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}\textbf{88$\pm$2} & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}10          & \cellcolor[HTML]{EFEFEF}10                    & \cellcolor[HTML]{EFEFEF}49          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}74$\pm$10         & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}85$\pm$2          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}10          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}47          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
-                           & Restrición Chi2                         & \textbf{88$\pm$4}                         & 1                                             & 83$\pm$4                                  & 1                                             & 10                                  & 8                                             & 47                                  & 1                                             \\ \hline
-                           & Relacion Positiva                       & 78$\pm$15                                 & 1                                             & \textbf{88$\pm$2}                         & 6                                             & 6                                   & 8                                             & 46                                  & 1                                             \\ \hline
-                           & Relacion Contraria                      & 65$\pm$7                                  & 9                                             & 82$\pm$3                                  & 9                                             & \textbf{31}                         & 4                                             & 15                                  & 5                                             \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Sin restricción & \cellcolor[HTML]{EFEFEF}74$\pm$10         & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}85$\pm$2          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}10          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}47          & \cellcolor[HTML]{EFEFEF}1                     \\ \hline
+                           & Restricción $\chi^2$                         & \textbf{88$\pm$4}                         & 1                                             & 87$\pm$3                                  & 1                                             & 10                                  & 8                                             & 47                                  & 1                                             \\ \hline
+                           & Relación Positiva                       & 78$\pm$15                                 & 1                                             & \textbf{88$\pm$2}                         & 6                                             & 6                                   & 8                                             & 46                                  & 1                                             \\ \hline
+                           & Relación Contraria                      & 65$\pm$7                                  & 9                                             & 82$\pm$3                                  & 9                                             & \textbf{31}                         & 4                                             & 15                                  & 5                                             \\ \hline
 \textit{Anorexia}          & \cellcolor[HTML]{C0C0C0}Sin aumento     & \cellcolor[HTML]{C0C0C0}75$\pm$3          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}80$\pm$0          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}67          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} & \cellcolor[HTML]{C0C0C0}72          & \multicolumn{1}{l}{\cellcolor[HTML]{C0C0C0}-} \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}\textbf{80$\pm$2} & \cellcolor[HTML]{EFEFEF}5                     & \cellcolor[HTML]{EFEFEF}81$\pm$2          & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}77          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}75          & \cellcolor[HTML]{EFEFEF}6                     \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}\textbf{80$\pm$1} & \cellcolor[HTML]{EFEFEF}8                     & \cellcolor[HTML]{EFEFEF}82$\pm$3          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}76          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}75          & \cellcolor[HTML]{EFEFEF}3                     \\ \hline
-                           & \cellcolor[HTML]{EFEFEF}Sin restriccion & \cellcolor[HTML]{EFEFEF}78$\pm$2          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}81$\pm$1          & \cellcolor[HTML]{EFEFEF}6                     & \cellcolor[HTML]{EFEFEF}78          & \cellcolor[HTML]{EFEFEF}6                     & \cellcolor[HTML]{EFEFEF}\textbf{78} & \cellcolor[HTML]{EFEFEF}6                     \\ \hline
-                           & Restrición Chi2                         & 79$\pm$2                                  & 5                                             & \textbf{82$\pm$1}                         & 7                                             & 78                                  & 5                                             & 77                                  & 1                                             \\ \hline
-                           & Relacion Positiva                       & 79$\pm$1                                  & 5                                             & \textbf{82$\pm$1}                         & 1                                             & 78                                  & 6                                             & 76                                  & 1                                             \\ \hline
-                           & Relacion Contraria                      & 76$\pm$4                                  & 4                                             & 81$\pm$2                                  & 1                                             & \textbf{81}                         & 8                                             & 75                                  & 5                                             \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Over            & \cellcolor[HTML]{EFEFEF}76$\pm$4 & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}80$\pm$1          & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}77          & \cellcolor[HTML]{EFEFEF}7                     & \cellcolor[HTML]{EFEFEF}75          & \cellcolor[HTML]{EFEFEF}6                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Tesauro         & \cellcolor[HTML]{EFEFEF}74$\pm$5 & \cellcolor[HTML]{EFEFEF}3                     & \cellcolor[HTML]{EFEFEF}80$\pm$1          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}76          & \cellcolor[HTML]{EFEFEF}2                     & \cellcolor[HTML]{EFEFEF}75          & \cellcolor[HTML]{EFEFEF}3                     \\ \hline
+                           & \cellcolor[HTML]{EFEFEF}Sin restricción & \cellcolor[HTML]{EFEFEF}76$\pm$4          & \cellcolor[HTML]{EFEFEF}4                     & \cellcolor[HTML]{EFEFEF}81$\pm$1          & \cellcolor[HTML]{EFEFEF}1                     & \cellcolor[HTML]{EFEFEF}78          & \cellcolor[HTML]{EFEFEF}6                     & \cellcolor[HTML]{EFEFEF}\textbf{78 }& \cellcolor[HTML]{EFEFEF}6                     \\ \hline
+                           & Restricción $\chi^2$                         & \textbf{76$\pm$3}                                  & 1                                             & \textbf{81$\pm$1}                         & 1                                             & 78                                  & 5                                             & 77                                  & 1                                             \\ \hline
+                           & Relación Positiva                       & 76$\pm$3                                  & 1                                             & 80$\pm$1                         & 1                                             & 78                                  & 6                                             & 76                                  & 1                                             \\ \hline
+                           & Relación Contraria                      & 74$\pm$1                                  & 1                                             & 80$\pm$1                                  & 1                                             & \textbf{81}                         & 8                                             & 75                                  & 5                                             \\ \hline
 \end{tabular}%
 
 }
