--- a/docs/latex/sections/03-trabajo/ap.tex
+++ b/docs/latex/sections/03-trabajo/ap.tex
@@ -2,58 +2,59 @@
 Los trabajos en perfilado de autor se han enfocado a identificar diversos rasgos de los autores: género, edad, nivel educativo, ocupación, rasgos de personalidad, tendencia política. Incluso han ido más allá al tratar de determinar características de comportamiento y condiciones médicas (trastornos como la anorexia o la depresión clínica). 
 
 Los primeros trabajos, motivados por la sociolingüística, utilizaron documentos formales: libros, ensayos y/o noticias; variando el tamaño del corpus estudiado de docenas a cientos de documentos. 
-Uno de los primeros trabajos en perfilado de autor, usando medios automáticos, fue presentado por \citep{Pennebaker2002}. Los investigadores presentan evidencia que liga el uso de las palabras con aspectos de personalidad, situaciones sociales y psicológicas.
-
-\citep{Argamon2009} demostró que se puede conocer el género, edad, lengua nativa y personalidad con un buen margen de exactitud, a través de ensayos personales de estudiantes. Las características relevantes encontradas fueron estilísticas, por ejemplo, el uso de pronombres, preposiciones y verbos modales. 
+Uno de los primeros trabajos en perfilado de autor, usando medios automáticos, fue presentado por \citep{Pennebaker2002}. Los investigadores presentan evidencia que liga el uso de las palabras con aspectos de personalidad, situaciones sociales y psicológicas. \citep{Argamon2009} demostró que se puede conocer el género, edad, lengua nativa y personalidad con un buen margen de exactitud, a través de ensayos personales de estudiantes. Las características relevantes encontradas fueron estilísticas, por ejemplo, el uso de pronombres, preposiciones y verbos modales. 
 
 En la actualidad, la investigación se ha enfocado determinar el perfil del autor utilizando datos extraídos de redes sociales, blogs y foros en línea. A continuación se presentan algunos de los trabajos más relevantes para esta tesis, específicamente los presentados en las conferencias PAN@CLEF siendo una de las pioneras en su tipo al incluir el perfilado de autor en todas sus ediciones.
 
 \subsubsection{PAN@CLEF}
-El mayor evento anual en perfilado de autor PAN es parte de las competencias organizadas bajo el marco del CLEF \citep{Rangel2013b, Rangel2019}. En este evento se ha estudiado el perfilado de autor desde una perspectiva multi-idioma, siendo el idioma inglés y español los más frecuentes. Las características recurrentes a perfilar ha sido género, edad y personalidad  \citep{Rangel2013b, Rangel2019, Rangel2016b, Stammatatos2015}.
+El mayor evento anual en perfilado de autor, PAN es parte de las competencias organizadas bajo el marco del CLEF \citep{Rangel2013b, Rangel2019}. En este evento se ha estudiado el perfilado de autor desde una perspectiva multi-idioma, siendo los idiomas inglés y español los más frecuentes. Las características recurrentes a perfilar han sido género, edad y personalidad  \citep{Rangel2013b, Rangel2019, Rangel2016b, Stammatatos2015}.
 La mayoría del trabajo existente se distingue por (i) el pre-procesamiento, (ii) la extracción de características o (iii) el método de clasificación.
 
-La técnica más común de \textbf{pre-procesamiento} entre los participantes es remover o enmascarar elementos específicos de las redes sociales (\textit{hashtags}, menciones de usuario, enlaces a páginas web, emoticones) \citep{daneshvar2018gender, jimenez2019bots, Pizarro2019}. Además de convertir las palabras a minúsculas, utilizar lematización  o \textit{stemming}; algunos participantes remueven puntuación, palabras de paro y caracteres especiales.
+La técnica más común de \textbf{pre-procesamiento} entre los participantes es remover o enmascarar elementos específicos de las redes sociales (\textit{hashtags}, menciones de usuario, enlaces a páginas web, emoticones) \citep{daneshvar2018gender, jimenez2019bots, Pizarro2019}. Además de convertir las palabras a minúsculas, utilizar lematización o \textit{stemming}; algunos participantes remueven puntuación, palabras de paro y caracteres especiales.
 
-En cuanto a la \textbf{extracción de características} los n-gramas de caracteres y palabras son ampliamente usados, en efecto las mejores soluciones propuestas para el perfilado de género en el PAN 2017, 2018 y 2019 \citep{basile2017there, daneshvar2018gender, Pizarro2019} utilizaron un ensamble de n-gramas de caracteres y n-gramas de palabras. En estos trabajos se ha identificado que una representación mediante n-gramas de caracteres puede ser capaz de capturar fragmentos relacionados a la estructura y estilo del texto. Algunas implementaciones también han propuesto esquemas de pesado inspirados en \textit{tf-idf} poniendo énfasis en el estilo y contenido de los textos.
+En cuanto a la \textbf{extracción de características}, los n-gramas de caracteres y palabras son ampliamente usados, en efecto las mejores soluciones propuestas para el perfilado de género en el PAN 2017, 2018 y 2019 utilizaron un ensamble de n-gramas de caracteres y n-gramas de palabras \citep{basile2017there, daneshvar2018gender, Pizarro2019}. En estos trabajos se ha identificado, que una representación mediante n-gramas de caracteres puede ser capaz de capturar fragmentos relacionados a la estructura y estilo del texto. Algunas implementaciones, también han propuesto esquemas de pesado inspirados en \textit{tf-idf} poniendo énfasis en el estilo y contenido de los textos.
 
-Con respecto a los \textbf{algoritmos de clasificación} existe una gran cantidad de enfoques, siendo lo más común el algoritmo de máquinas de soporte vectorial (SVM). Un punto importante a destacar, es que a partir del año 2018 se han presentado algunas propuestas utilizando aprendizaje profundo. Sin embargo, hasta la fecha no han podido superar a los algoritmos tradicionales. 
-La primera vez que un enfoque de aprendizaje profundo, concretamente una arquitectura CNN, aparece entre los primeros lugares (lugar once) fue en la conferencia PAN 2019 \citep{Rangel2019}. Es importante notar, que ha diferencia del enfoque tradicional, en el caso de los modelos basados en redes neuronales, la extracción de características está implícita en su arquitectura.
+Con respecto a los \textbf{algoritmos de clasificación}, existe una gran cantidad de enfoques, siendo lo más común el algoritmo de máquinas de soporte vectorial (SVM). Un punto importante a destacar, es que a partir del año 2018 se han presentado algunas propuestas utilizando aprendizaje profundo; mediante la utilización de representaciones distribucionales (e.g., word2vec, glove, etc.), en combinación con diferentes arquitecturas de red basadas en redes recurrentes y redes convolucionales. Sin embargo, hasta la fecha no han podido superar a los algoritmos tradicionales.
+
+%\cite{veenhoven2018using} propuso una red CNN y una red bidireccional LSTM 
+
+La primera vez que un enfoque de aprendizaje profundo, concretamente una arquitectura CNN, aparece entre los primeros lugares (lugar once) fue en la conferencia PAN@2019 \citep{Rangel2019}. 
+
+Es importante notar que, a diferencia de los enfoques tradicionales, en el caso de los modelos basados en redes neuronales, la extracción de características está implícita en su arquitectura.
 
 \subsection{Detección de trastornos mentales en redes sociales}
-%¿El lenguaje contiene información acerca del estado mental de una persona? Es una pregunta que es de interés por muchos investigadores  por mas de 70 años.
-%Con respecto al perfilado de condiciones médicas podemos considerar a las competencias del eRISK. Este tipo de competencias están orientadas a la detección temprana de enfermedades mentales \citep{}.
-Uno de los primeros estudios en la detección de depresión mediante medios automáticos \citep{rude2004language} encontró que los participantes deprimidos utilizan más palabras negativas y el uso del pronombre ``yo" ( \textit{``I"} en inglés) más que los participantes no deprimidos. 
 
-%Derivado de la investigación psicológica, \citep{wang2013depression} utilizo caracteristicas tales como el uso de pronombres en primera persona, la interacción social de los usuarios y comportamientos en micro-blogs.  
-Moviéndose a la investigación en redes sociales, \citep{de2013predicting} empleó \textit{crowdsourcing} (una forma de colaboración empleando a múltiples personas a través de internet) para obtener un conjunto de usuarios de Twitter quienes reportaron ser diagnosticados con depresión clínica, en este trabajo demostraron el uso potencial de Twitter como una fuente de información para medir signos de depresión mayor en individuos. Encontraron que los individuos con depresión muestran baja actividad social, emociones negativas, auto atención, expresión de preocupaciones médicas y relacionales, además de pensamientos religiosos. Estos atributos fueron considerados para construir un clasificador SVM alcanzando una exactitud de 70\%. Estos resultados demostraron la factibilidad de detectar la depresión en redes sociales. 
+Uno de los primeros estudios en la detección de depresión mediante medios automáticos \citep{rude2004language}, encontró que los participantes deprimidos utilizan más palabras negativas y el uso del pronombre ``yo" ( \textit{``I"} en inglés) más que los participantes no deprimidos. 
+
+Moviéndose a la investigación en redes sociales \citep{de2013predicting}, empleó \textit{crowdsourcing} (una forma de colaboración, empleando a múltiples personas a través de internet) para obtener un conjunto de usuarios de Twitter, quienes reportaron ser diagnosticados con depresión clínica, en este trabajo demostraron el uso potencial de Twitter como una fuente de información para medir signos de depresión mayor en individuos. Encontraron que los individuos con depresión muestran baja actividad social, emociones negativas, egocentrismo, expresión de preocupaciones médicas y relacionales, además de pensamientos religiosos. Estos atributos fueron considerados para construir un clasificador SVM alcanzando una exactitud de 70\%. Estos resultados demostraron la factibilidad de perfilar usuarios con signos de depresión en redes sociales. 
 
 Sin embargo, la creación de colecciones de documentos para abordar este tipo de problemas es costosa y difícil. Bajo estas condiciones y debido al particular interés en el perfilado de características de comportamiento \citep{kumar2018aggression} y trastornos mentales  \citep{de2013predicting}, se han desarrollado conferencias y competencias específicas.
-Una de ellas es la conferencia eRISK \citep{Losada2018}. El principal objetivo de este foro es la detección temprana de un trastorno a través de los historiales de comunicación de un usuario en blogs. Independientemente del enfoque de detección temprana también es de interés tratar la detección
+Una de ellas es la conferencia eRisk \citep{Losada2018}. El principal objetivo de este foro es la detección temprana de un trastorno a través de los historiales de comunicación de un usuario en blogs. Independientemente del enfoque de detección temprana, también es de interés tratar la detección
 considerando todo el historial de un usuario como un solo documento. 
 
-El eRISK 2018 presentó dos tareas: detección de depresión y detección de anorexia. En ambos casos se trata de un problema de clasificación no temática con datos desbalanceados.
+El eRisk 2018 presentó dos tareas: detección de depresión y detección de anorexia. En ambos casos se trata de un problema de clasificación no temática con datos desbalanceados.
 
 
 \subsubsection{eRisk 2018}
 
-En la edición eRisk 2017 \citep{losada2017erisk, Losada2018}, los organizadores construyeron un conjunto de datos con publicaciones de usuarios deprimidos y no deprimidos extraídos de la red social Reddit. En eRisk 2018 se complementó el conjunto original con más usuarios y se agregó la tarea de detección de anorexia. Para abordar estas tareas se evaluaron un total de 45 contribuciones de diferentes instituciones, algunas de las propuestas dieron un tratamiento estándar experimentado con diferentes características, LDA, n-gramas de palabras y diferentes esquemas de pesado \citep{cacheda2018analysis, almeida2017detecting, ortega2018peimex}. Mientras que muy pocos utilizaron enfoques de aprendizaje profundo: \citep{trotzek2018word, wang2018neural, liu2018tua1}.
+En la edición eRisk 2017 \citep{losada2017erisk, Losada2018}, los organizadores construyeron un conjunto de datos con publicaciones de usuarios deprimidos y no deprimidos extraídos de la red social Reddit. En eRisk 2018 se complementó el conjunto original con más usuarios y se agregó la tarea de detección de anorexia. Para abordar estas tareas se evaluaron un total de 45 contribuciones de diferentes instituciones, algunas de las propuestas dieron un tratamiento estándar, experimentado con diferentes características, LDA, n-gramas de palabras y diferentes esquemas de pesado \citep{cacheda2018analysis, almeida2017detecting, ortega2018peimex}. Mientras que muy pocos utilizaron enfoques de aprendizaje profundo: \citep{trotzek2018word, wang2018neural, liu2018tua1}.
 
-El equipo TUA1 \citep{liu2018tua1} además de presentar un modelo construido con una SVM Lineal, pesado \textit{tf-idf} y normalización $l2$, también construyeron un modelo basado en una arquitectura compuesta de una red CNN -que actúa como extractor de características- y una LSTM. En su configuración experimental utilizaron una longitud de entrada de 2000 tokens, 64 filtros para la red CNN de tamaño 5, \textit{MaxPooling} de tamaño 4, un factor de 0.25 para \textit{dropout} y \textit{Relu} como función de activación. Para la fase de entrenamiento eligieron entropía cruzada binaria para la función de pérdida y el optimizador \textit{Adam}. Mediante este modelo neuronal se obtuvieron 0.29 de \textit{F1}, en la tarea de depresión y 0.36 para la detección de anorexia. 
+El equipo TUA1 \citep{liu2018tua1}, además de presentar un modelo construido con una SVM Lineal, pesado \textit{tf-idf} y normalización $l2$, también construyeron un modelo basado en una arquitectura compuesta de una red CNN, que actúa como extractor de características, y una LSTM. En su configuración experimental utilizaron una longitud de entrada de 2000 tokens, 64 filtros para la red CNN de tamaño 5, \textit{MaxPooling} de tamaño 4, un factor de 0.25 para \textit{dropout} y \textit{Relu} como función de activación. Para la fase de entrenamiento, eligieron entropía cruzada binaria para la función de pérdida y el optimizador \textit{Adam}. Mediante este modelo neuronal se obtuvieron 0.29 de \textit{F1}, en la tarea de depresión y 0.36 para la detección de anorexia. 
 
-Los investigadores que conformaron el equipo TBS \citep{wang2018neural} abordaron las tareas como un problema de clasificación de oraciones y presentaron un modelo basado en CNN en combinación con un pesado \textit{tf-idf}; obteniendo 0.26 de \textit{F1} para la detección de depresión y 0.67 para anorexia.
+Los investigadores que conformaron el equipo TBS \citep{wang2018neural}, abordaron las tareas como un problema de clasificación de oraciones y presentaron un modelo basado en CNN, en combinación con un pesado \textit{tf-idf}; obteniendo 0.26 de \textit{F1} para la detección de depresión y 0.67 para anorexia.
 
-El equipo ganador \citep{trotzek2018word} FHDO-BCSG presento 5 modelos de clasificación diferentes, para la detección de depresión. El mejor modelo fue un ensamble de bolsas de palabras BOW, con diferentes tipos de pesado y n-gramas, el algoritmo de clasificación utilizado fue regresión logística utilizando un peso modificado para cada clase para incrementar el costo de los falsos negativos; obteniendo 0.64 de \textit{F1} para depresión y 0.81 para la detección de anorexia. 
-Además presentaron un modelo basado en una \textit{CNN} utilizando vectores \textit{FastText} de 300 dimensiones, entrenados con documentos extraídos de un corpus de 1.37 billones de comentarios en Reddit, una longitud de entrada de 100 tokens, una capa de convolución, 100 filtros con altura igual a 2 y con un ancho correspondiente al tamaño de los vectores de palabras, max pooling de tamaño 1 y CReLu como función de activación; resultando en un vector de 200 dimensiones por documento que es propagado a través de cuatro capas totalmente conectadas. El entrenamiento fue realizado utilizando el optimizador \textit{Adam} para minimizar la entropía cruzada, mediante un tamaño de batch de 10,000 documentos de 100 palabras  y una taza de aprendizaje de $1e-4$ durante 30 épocas. Este modelo logró obtener una puntuación \textit{F1} de 0.54 para la detección de depresión y 0.81 para anorexia. Agregando características extraídas manualmente lograron mejorar la puntuación \textit{F1} a 0.85 para la detección de anorexia.
+El equipo ganador \citep{trotzek2018word} FHDO-BCSG, presento 5 modelos de clasificación diferentes para la detección de depresión. El mejor modelo fue un ensamble de bolsas de palabras BOW, con diferentes tipos de pesado y n-gramas, el algoritmo de clasificación utilizado fue regresión logística, utilizando un peso modificado para cada clase para incrementar el costo de los falsos negativos; obteniendo 0.64 de \textit{F1} para depresión y 0.81 para la detección de anorexia. 
+Además presentaron un modelo basado en una red \textit{CNN}, utilizando vectores \textit{FastText} de 300 dimensiones, entrenados con documentos extraídos de un corpus de 1.37 billones de comentarios en Reddit, una longitud de entrada de 100 tokens, una capa de convolución, 100 filtros con altura igual a 2 y con un ancho correspondiente al tamaño de los vectores de palabras, max pooling de tamaño 1 y \textit{CReLu} como función de activación; resultando en un vector de 200 dimensiones por documento que es propagado a través de cuatro capas totalmente conectadas. El entrenamiento fue realizado utilizando el optimizador \textit{Adam} para minimizar la entropía cruzada, mediante un tamaño de batch de 10,000 documentos de 100 palabras y una taza de aprendizaje de $1e-4$ durante 30 épocas. Este modelo logró obtener una puntuación \textit{F1} de 0.54 para la detección de depresión y 0.81 para anorexia. Agregando características extraídas manualmente lograron mejorar la puntuación \textit{F1} a 0.85 para la detección de anorexia.
 
-En general la tarea de detección de depresión fue la más difícil y de un total de 45 modelos evaluados la puntuación \textit{F1} promedio fue de 0.42 mientras que para anorexia 0.56 indicando que aún falta mucho por mejorar en estas tareas. 
+En general la tarea de detección de depresión fue la más difícil y de un total de 45 modelos evaluados, la puntuación \textit{F1} promedio fue de 0.42 mientras que para anorexia 0.56, indicando que aún falta mucho por mejorar en estas tareas. 
 
 \subsubsection{eRisk 2019}
-El propósito general de esta conferencia fue evaluar las metodologías y técnicas empleadas para la detección temprana de signos de depresión \citep{Losada2019}. A diferencia de la edición anterior la tarea de detección de depresión tuvo un nuevo enfoque, fue orientada a analizar las publicaciones de un usuario en redes sociales con el objetivo de extraer evidencia útil para estimar el nivel de depresión de un usuario mediante el completado automático de un cuestionario basado en el inventario de Beck \cite{beck1961inventory}. 
+El propósito general de esta conferencia fue evaluar las metodologías y técnicas empleadas para la detección temprana de signos de depresión \citep{Losada2019}. A diferencia de la edición anterior, la tarea de detección de depresión tuvo un nuevo enfoque, fue orientada a analizar las publicaciones de un usuario en redes sociales con el objetivo de extraer evidencia útil para estimar el nivel de depresión de un usuario, esto fue posible mediante el completado automático de un cuestionario basado en el inventario de Beck \cite{beck1961inventory}. 
 
-En esta edición destacó un mayor uso de modelos de aprendizaje profundo para tratar el tema como un problema de clasificación. Los modelos más utilizados fueron basados en redes recurrentes y convolucionales. Algunos participantes se enfocaron en conseguir más datos de entrenamiento, como por ejemplo:  tomar los datos etiquetas de ediciones anteriores, incorporar información extensa y recuperar datos recavados de la red social Reddit. Es importante hacer notar que los equipos que utilizaron más evidencia para construir sus modelos de aprendizaje obtuvieron los mejores resultados.
+En esta edición destacó un mayor uso de modelos de aprendizaje profundo para tratar el tema como un problema de clasificación. Los modelos más utilizados fueron basados en redes recurrentes y convolucionales. Algunos participantes se enfocaron en conseguir más datos de entrenamiento como, por ejemplo:  tomar los datos etiquetados de ediciones anteriores, incorporar información extensa y recuperar datos de la red social Reddit. Resalta el hecho, que los equipos que utilizaron más evidencia para construir sus modelos de aprendizaje obtuvieron los mejores resultados.
 
-El equipo CAMH \citep{Abed-Esfahani2019} alcanzó una mayor puntación en predecir la categoría correcta de nivel de depresión utilizando el modelo de lenguaje pre-entrenado GPT-1 como extractor de características y adicionado características de la herramienta LIWC \citep{pennebaker2001linguistic} . Utilizando un enfoque no supervisado, lograron obtener un 45\% en la métrica DCHR(Indica la fracción de casos en donde el cuestionario automático indica  una categoría de depresión que es equivalente a la categoría del cuestionario real).
+El equipo CAMH \citep{Abed-Esfahani2019}, alcanzó una mayor puntación en predecir la categoría correcta a nivel de depresión, utilizando el modelo de lenguaje pre-entrenado GPT-1 como extractor de características y adicionado características de la herramienta LIWC \citep{pennebaker2001linguistic}. Utilizando un enfoque no supervisado, lograron obtener un 45\% en la métrica DCHR, la cual calcula, la fracción de casos en donde el cuestionario automático indica una categoría de depresión equivalente a la categoría del cuestionario real.
 
-El equipo UNSL \citep{Burdisso2019} obtuvo el mejor desempeño para predecir el cuestionario a nivel pregunta obteniendo una puntación de 41.43\% en AHR(El promedio de todos los usuarios en el que el cuestionario automático tiene exactamente la misma respuesta que el real) y 40\% en DCHR.  Esta propuesta consistió en utilizar los datos de entrenamiento de la tarea eRisk 2018 y un algoritmo de clasificación diseñado específicamente para las tareas de detección temprana.
+El equipo UNSL \citep{Burdisso2019}, obtuvo el mejor desempeño para predecir el cuestionario a nivel pregunta obteniendo una puntación de 41.43\% en AHR (el promedio de todos los usuarios, en el que el cuestionario automático tiene exactamente la misma respuesta que el real) y 40\% en DCHR. Esta propuesta consistió en utilizar los datos de entrenamiento de la tarea eRisk 2018 y un algoritmo de clasificación diseñado específicamente para las tareas de detección temprana.
 
 Aunque la efectividad de los modelos es aún modesta, los experimentos sugieren que la evidencia adicional extraída de redes sociales es útil y las herramientas automáticas o semi-automáticas pueden ser diseñadas para detectar individuos en riesgo \citep{losada2019overview}.
