--- a/docs/latex/sections/figures/graficas_comparacion2018.tex
+++ b/docs/latex/sections/figures/graficas_comparacion2018.tex
@@ -10,17 +10,17 @@
     \end{subfigure}
     
   
-    \begin{subfigure}[b]{0.5\textwidth}
-        \includegraphics[width=\textwidth]{sections/figures/SVM2018.png}
-        \caption{SVM}
-    \end{subfigure}
-    \hfill
-    \begin{subfigure}[b]{0.5\textwidth}
-        \includegraphics[width=\textwidth]{sections/figures/SVM-C2018.png}
-        \caption{SVM-C}
-    \end{subfigure}
+    % \begin{subfigure}[b]{0.5\textwidth}
+    %     \includegraphics[width=\textwidth]{sections/figures/SVM2018.png}
+    %     \caption{SVM}
+    % \end{subfigure}
+    % \hfill
+    % \begin{subfigure}[b]{0.5\textwidth}
+    %     \includegraphics[width=\textwidth]{sections/figures/SVM-C2018.png}
+    %     \caption{SVM-C}
+    % \end{subfigure}
 
    
-    \caption{Relación entre el aumento del conjunto de datos \textit{Depresión 2018} y la ganancia en F1.}
+    \caption{Relación entre el aumento del conjunto de datos \textit{Depresión 2018} y la ganancia porcentual en F1.}
     \label{fig:aumento_n_depresion}
 \end{figure}
