--- a/docs/latex/sections/tables/depresion_users_filter.tex
+++ b/docs/latex/sections/tables/depresion_users_filter.tex
@@ -1,5 +1,5 @@
 \begin{table}[!hbt]
-\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras después del pre-procesamiento, realizando el filtro. Los números resaltados en negritas representan el numero de historiales comparado con el numero de secuencias} \label{table:filter_users}
+\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras después del pre-procesamiento, realizando el filtro. Los números resaltados en negritas representan el número de historiales comparado con el número de secuencias} \label{table:filter_users}
 
 \resizebox{\textwidth}{!}{%
 
@@ -26,11 +26,12 @@ no-deprimido                        & \textbf{746} - 125,823                    
 \rowcolor[HTML]{EFEFEF} 
 \textit{Conjunto 2: Anorexia}       & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} & \multicolumn{1}{c}{\cellcolor[HTML]{EFEFEF}} &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-con anorexia                        & \textbf{61}-23,335                                    & \textbf{73}-16,751                                    &                                                              \\ \hline
+con anorexia                        & \textbf{61}-15,657                                    & \textbf{73}-16,751                                    &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-sin-anorexia                        & \textbf{411}-107,239                                  & \textbf{742}-254,640                                  &                                                              \\ \hline
+sin-anorexia                        & \textbf{405}-58,837                                  & \textbf{742}-254,640                                  &                                                              \\ \hline
 \rowcolor[HTML]{FFFFFF} 
-\textbf{Total}                      & \textit{\textbf{472}-130,574}                         & \textit{\textbf{815}-271,391}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{131,264}} \\ \hline
+\textbf{Total}                      & \textit{\textbf{466}-{74,494}}                         & \textit{\textbf{815}-271,391}                         & \multicolumn{1}{c}{\cellcolor[HTML]{FFFFFF}\textit{80,964
+}} \\ \hline
 \end{tabular}
 
 }
